# vibecoding_fastapi_postgressql

./: .env.example  ERD.md  README.md  agent_corrections.md  prompts.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  posts.py
tests/: conftest.py  test_auth_posts.py
